# miniML

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yaml  genindex.html  intro.html  miniML_gui.py  objects.inv  pyproject.toml  requirements.txt  requirements_gui.txt  run_gui.py  search.html  searchindex.js  tutorial.ipynb  tutorial_TL.ipynb  tutorial_resampling.ipynb
_sources/general/: batch_analysis.md  loading_data.ipynb  models.md  tutorial.ipynb  tutorial_resampling.ipynb
_sources/gui/: gui_analyze.md  gui_auto_settings.md  gui_display.md  gui_intro.md  gui_load.md  gui_save.md  gui_settings.md
_sources/training/: TL_training.ipynb  tutorial_TL_model.ipynb
core/: deconvolution.py  miniML.py  miniML_event_gui.py  miniML_event_gui_V2.py  miniML_event_gui_V3.py  miniML_functions.py  miniML_gui.py  miniML_gui_EventViewer.py  miniML_plot_functions.py  miniML_settings.py  miniML_updated_functions.py  template_matching.py
docs/: _config.yml  _toc.yml  intro.md
docs/gui/: gui_analyze.md  (+5 more)
general/: batch_analysis.html  installation.html  loading_data.html  models.html  tutorial.html  tutorial_resampling.html
gui/: gui_analyze.html  gui_auto_settings.html  gui_display.html  gui_eventview.html  gui_intro.html  gui_load.html  gui_save.html  gui_settings.html
miniml/: __init__.py  miniML.py  miniML_gui.py  miniML_plot_functions.py  miniml.css.template  template_matching.py  threshold_detection.py
models/: GC_lstm_model.h5  relevant_settings.txt
training/: TL_training.html  full_training.html  model_training.html  tutorial_TL_model.html
(+39 files in other folders)
